syntax = "proto3";

package chat.v1;

option go_package = "github.com/you/grpc-messenger/server/gen/chat/v1;chatv1";

// --- messages ---
message User {
  string id = 1;
  string display_name = 2;
}

message ChatMessage {
  string id = 1;
  string room_id = 2;
  User   sender = 3;
  string text = 4;
  int64  sent_at_unix = 5;
}

message SendRequest  { string room_id = 1; string text = 2; }
message SendResponse { ChatMessage message = 1; }

message HistoryRequest  { string room_id = 1; int32 limit = 2; }
message HistoryResponse { repeated ChatMessage messages = 1; }

message StreamEnvelope {
  oneof payload {
    ChatMessage message   = 1;
    User        user_joined = 2;
    User        user_left   = 3;
  }
}

// --- service ---
service ChatService {
  rpc Send       (SendRequest)   returns (SendResponse);
  rpc History    (HistoryRequest) returns (HistoryResponse);
  rpc ChatStream (HistoryRequest) returns (stream StreamEnvelope);
}

